# Agentic-AI

./: .editorconfig  .env.example  .eslintrc.json  .gitattributes  .gitignore  .pre-commit-config.yaml  AgenticAI.spec  BUILD.md  CHANGELOG.md  CONFIGURATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  RELEASE.md  agentic-ai.desktop  agentic-ai.spec  agentic_ai.py  agentic_file_assistant.py  app_launcher.py  build.py  build_requirements.txt  build_windows.py  config.example.json  config.json  file_manipulation_test.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  temp_fix.txt  test_capabilities.py  tox.ini  tsconfig.json
chrome/: background.js  content.css  content.js  manifest.json  options.js  popup.html  popup.js
docs/: CHANGES_2024-03-07.md  QUICK_START.md  USER_GUIDE.md  how-to-use.md  knowledgebase.md
examples/: file_operations_demo.py  windows_system_demo.py
release/: RELEASE_NOTES.md
release/python/: agentic_ai-1.0.0-py2.py3-none-any.whl
scripts/: agentic-ai  verify_installation.py
src/: __init__.py  config.py  extension.ts  main.py
src/agentic_ai/: __init__.py  cli.py  gui.py  main.py
src/api/: client.py
src/core/: agentic_core.py  ai_engine.py  conversation_manager.py  file_operations.py  system_operations.py
src/gui/: main_window.py
src/plugins/: base_plugin.py  plugin_manager.py  weather_plugin.py
src/test/: extension.test.ts  runTest.ts
src/tests/: test_agentic_ai.py
src/tests/suite/: index.ts
src/ui/: main_window.py
src/utils/: __init__.py  code_generator.py  conversation_logger.py  file_system_interface.py  knowledge_manager.py  logger.py  permission_manager.py
tests/: .coveragerc  README.md  __init__.py  aggregate_results.py  analyze_performance.py  analyze_results.py  analyze_security.py  conftest.py  dashboard.py  export_results.py  generate_coverage_report.py  generate_test_data.py  notification_config.json  notify_results.py  requirements.txt  setup_test_env.py  test_ai_engine.py  test_api.py  test_config.json  test_runner.py  test_scenarios.py  test_suite.py  test_ui.py  test_utils.py  visualize_results.py
tests/dashboard/assets/: style.css
utils/: logger.py
